--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
   <title>Mintra</title>
   <style>
      * {
-      
+      user-select: none;
       scrollbar-width: none;
     }
 
     *::-webkit-scrollbar {
       display: none;
     }
+    input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 
     body {
       overflow-x: hidden;
